--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,7 @@ body {
 
 /* typo */
 h1,
-h2,
-h3 {
+h2 {
   font-family: var(--f-tittle);
   font-size: 2.25rem;
 }
@@ -40,18 +39,14 @@ p {
 }
 
 section {
-  height: 50vh;
-  margin: auto;
-  padding: 4rem 2rem;
+  padding: 4rem 0;
 }
 
 .container {
+  width: 85%;
   max-width: 1128px;
   margin: 0 auto;
-}
-
-.row {
-  display: flex;
+  text-align: center;
 }
 
 img {
@@ -59,30 +54,30 @@ img {
   align-self: center;
 }
 
-header {
+.hero {
   background-color: var(--clr-cream);
 }
 
-header > div {
-  height: 100vh;
+.hero > div {
+  min-height: 660px;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-header p {
+.hero p {
   font-size: 1.125rem;
   letter-spacing: 10px;
   font-weight: 300;
   margin: 0;
 }
 
-header h1 {
+.hero h1 {
   color: var(--clr-brown);
-  font-size: 3.75rem;
+  font-size: 3rem;
   font-weight: 900;
   line-height: 1.1;
-  text-align: center;
   margin: 0.75rem auto;
   max-width: 75%;
 }
@@ -95,18 +90,10 @@ header h1 {
   text-align: center;
 }
 
-.quality-design > div {
-  gap: 3rem;
-}
-
 /* custom */
 .custom {
   background-color: var(--clr-dark);
   color: #fff;
-}
-
-.custom > div {
-  gap: 3rem;
 }
 
 /* care */
@@ -114,6 +101,22 @@ header h1 {
   background-color: var(--clr-brown);
   color: var(--clr-cream);
 }
-.care > div {
-  gap: 3rem;
+
+@media (min-width: 800px) {
+  .row {
+    display: flex;
+    align-items: center;
+  }
+
+  section .row {
+    gap: 3rem;
+  }
+
+  .col {
+    width: 100%;
+  }
+
+  .hero h1 {
+    font-size: 3.75rem;
+  }
 }
